--- a/fixme.dtx
+++ b/fixme.dtx
@@ -469,8 +469,7 @@
 % \begin{itemize}
 % \item[v4.0] New feature: floating notes (not specific to any portion of
 %   text), suggested by Rasmus Villemoes.\\
-%   New feature: automatically avoid the \texttt{margin} and
-%   \texttt{marginclue} layouts when not in outer par mode, suggested by Will
+%   New feature: alternate layout autoswitch for inner mode, suggested by Will
 %   Robertson.\\
 %   New feature: key/value argument syntax in the whole user interface.\\
 %   New command: \cs{fxsetup}.\\
