--- a/TODO
+++ b/TODO
@@ -74,9 +74,7 @@ text, but doesn't show comments
   1/ either by adding fxlog*prefix macros (dependent on the language)
   2/ or by finding a way to adapt fx*prefix macros for tty output (?!)
 
-* Investigate the "Floats lost" problem with fixmes in captions
-  (does not occur all the time)
-  and the footnote which is not sticked to the text
+* Find out why the footnote which is not sticked to the text
 
 * Provide a collection of themes as separate source files, redefining existing
   (or adding user) layouts. See marginnote, pdfcomment, the todonotes package
