Document mparhack package

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -360,6 +360,9 @@
 % typeset, compilation breakage with the ``Floats lost'' message \etc If
 % you're facing this problem, you need to change your layout locally.
 %
+% \subsubsubsection{Marginal paragraphs showing up on the wrong page}
+% You want to look at the \texttt{mparhack} package.
+%
 % \subsubsubsection{ACM classes compatibility}
 % The ACM \textsc{Sig} classes (\texttt{acm\_proc\_article-sp} and
 % \texttt{sig-alternate}) forbid the use of \cs{marginpar}, so if you use
